[gd_scene load_steps=15 format=3 uid="uid://bdap03ne0xoh3"]

[ext_resource type="Script" path="res://scripts/modules/traps/falling_trap.gd" id="1_ynfee"]
[ext_resource type="Texture2D" uid="uid://ewcbwu2rvhjs" path="res://assets/sprites/human/fire.png" id="2_ivh0t"]
[ext_resource type="PackedScene" uid="uid://b2scf0mf7s0y1" path="res://scenes/modules/kill_zone.tscn" id="3_h7dve"]

[sub_resource type="AtlasTexture" id="AtlasTexture_80aon"]
atlas = ExtResource("2_ivh0t")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2lq6"]
atlas = ExtResource("2_ivh0t")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ncrf"]
atlas = ExtResource("2_ivh0t")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogswq"]
atlas = ExtResource("2_ivh0t")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_maiad"]
atlas = ExtResource("2_ivh0t")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1cj0"]
atlas = ExtResource("2_ivh0t")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpr5l"]
atlas = ExtResource("2_ivh0t")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j73s"]
atlas = ExtResource("2_ivh0t")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3fva"]
atlas = ExtResource("2_ivh0t")
region = Rect2(64, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ojlxa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80aon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2lq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ncrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogswq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_maiad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1cj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpr5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j73s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3fva")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_w0qlj"]
radius = 46.9791

[node name="FallingTrap" type="Area2D"]
collision_mask = 128
script = ExtResource("1_ynfee")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_ojlxa")
autoplay = "default"
frame = 1
frame_progress = 0.244676

[node name="kill_zone" parent="." instance=ExtResource("3_h7dve")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill_zone"]
position = Vector2(-1, 5)
scale = Vector2(0.279975, 0.279975)
shape = SubResource("CircleShape2D_w0qlj")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
